# dsss

./: .gitignore  README.md  pyproject.toml  rounds.db
docker/: compose.yaml
docker/dsss/: Dockerfile
docker/frontend/: Dockerfile
dsss/: api.py  config.py  logger.py  main.py  service.py  team.py
dsss/api/: __init__.py  admin.py  api.py  shared.py  status.py
dsss/checks/: base.py  ftp.py  http.py  ldap.py  ping.py  random.py  smb.py  ssh.py  tcp.py
dsss/engine/: engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: admin.ts  api.ts  status.ts
frontend/src/components/: Footer.tsx  Header.tsx  Login.tsx  Overview.tsx  RoundGraph.tsx  ScoreGraph.tsx
frontend/src/hooks/: useStatusPoller.ts
frontend/src/pages/: Admin.tsx  Home.tsx  NotFound.tsx  Overview.tsx
