[project]
name = "dsss"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "coal-rock", email = "colebrazinski15@gmail.com"},
]
dependencies = ["aioping", "fastapi[standard]", "asyncssh>=2.21.1", "aiohttp>=3.13.2", "aioftp>=0.27.2", "bonsai>=1.5.4", "ldap3>=2.9.1", "aiosmb>=0.4.14", "smbprotocol>=1.15.0", "ruff>=0.14.11"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python -m dsss.main"
